# demo

./: README.md
neuro-receipts-explorer/: README.md
neuro-receipts-explorer/backend/: main.py
neuro-receipts-explorer/backend/data/: agents.json  receipts.json
neuro-receipts-explorer/frontend/: index.html  package-lock.json  package.json  vite.config.js
neuro-receipts-explorer/frontend/src/: App.tsx  api.ts  main.tsx  styles.css
neuro-receipts-explorer/frontend/src/components/: NetworkGraph.tsx  NodeStatus.tsx  ReceiptCard.tsx
neuro-sdk-python/: README.md  pyproject.toml
neuro-sdk-python/examples/: mint_data_rights.py  run_agent_demo.py  simulate_safety_check.py
neuro-sdk-python/neurosdk/: agents.py  config.yaml  data_rights.py  network.py  receipts.py  safety.py  types.py
neuro-sdk-python/tests/: test_agent.py  test_receipts.py
